# edu-agent

./: .env  README.md  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
src/edu_agent/: agents.py  crew.py  main.py  tasks.py
src/edu_agent/config/: agents.yaml  tasks.yaml
streamlit_app/: app.py
streamlit_app/components/: input_form.py  roadmap_display.py
streamlit_app/utils/: helpers.py
