[project]
name = "edu_agent"
version = "0.1.0"
description = "edu-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
edu_agent = "edu_agent.main:run"
run_crew = "edu_agent.main:run"
train = "edu_agent.main:train"
replay = "edu_agent.main:replay"
test = "edu_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
